--- a/src/app/pages/view-collection/view-collection.component.scss
+++ b/src/app/pages/view-collection/view-collection.component.scss
@@ -2,29 +2,19 @@
   .collection-data {
     margin-bottom: 25px;
     .collection-header {
-      display: grid;
-      grid-template-columns: 1fr 20px;
+      margin-bottom: 15px;
 
-      .title {
-        transition: all 0.2s ease-in-out;
-
-        &:focus {
-          background-color: white;
-          border-radius: 10px;
-          padding: 15px;
-
-          .fa-edit {
-            opacity: 0;
-          }
+      mat-form-field {
+        width: 100%;
+        
+        input {
+          font-size: 25px;
         }
-      }
 
-      .fa-edit {
+        mat-icon {
+          font-size: 100%;
           color: rgba(0, 0, 0, .7);
-          grid-column: span end;
-          align-self: center;
-          justify-self: center;
-          font-size: 12px;
+        }
       }
     }
 
