--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -1,27 +1,33 @@
-<mat-progress-bar mode="query" *ngIf="isLoading"></mat-progress-bar>
-<div class="feed-container">
+<div class="feed-container" 
+  infiniteScroll 
+  [infiniteScrollDistance]="scrollDistance"
+  [infiniteScrollUpDistance]="scrollUpDistance" 
+  [infiniteScrollThrottle]="throttle" 
+  (scrolled)="onScrollDown()"
+  (scrolledUp)="onUp()">
+  <app-loading-post *ngIf="isLoading"></app-loading-post>
   <app-post *ngFor="let post of posts" [data]="post"></app-post>
+</div>
 
-  <div class="add-content-buttons">
-    <button class="fab-add-content" mat-fab color="primary" (click)="isFabActive = !isFabActive"
-      [ngClass]="isFabActive ? 'animation-rotate90Clockwise' : 'animation-rotate90AntiClockwise'">
-      <fa-icon [icon]="faPlus"></fa-icon>
+<div class="add-content-buttons">
+  <button class="fab-add-content" mat-fab color="primary" (click)="isFabActive = !isFabActive"
+    [ngClass]="isFabActive ? 'animation-rotate90Clockwise' : 'animation-rotate90AntiClockwise'">
+    <fa-icon [icon]="faPlus"></fa-icon>
+  </button>
+
+  <div class="fab-add-post" [ngClass]="isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'"
+    [ngStyle]="{'animation-delay': isFabActive ? '-0.1s' : '0s'}">
+    <span>Share Resource</span>
+    <button routerLink="/share-resource" mat-mini-fab>
+      <fa-icon [icon]="faLink"></fa-icon>
     </button>
+  </div>
 
-    <div class="fab-add-post" [ngClass]="isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'"
-      [ngStyle]="{'animation-delay': isFabActive ? '-0.1s' : '0s'}">
-      <span>Share Resource</span>
-      <button routerLink="/share-resource" mat-mini-fab>
-        <fa-icon [icon]="faLink"></fa-icon>
-      </button>
-    </div>
-
-    <div class="fab-add-document" [ngClass]="isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'"
-      [ngStyle]="{'animation-delay': isFabActive ? '0s' : '-0.1s'}">
-      <span>Write an Article</span>
-      <button mat-mini-fab>
-        <fa-icon [icon]="faFile"></fa-icon>
-      </button>
-    </div>
+  <div class="fab-add-document" [ngClass]="isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'"
+    [ngStyle]="{'animation-delay': isFabActive ? '0s' : '-0.1s'}">
+    <span>Write an Article</span>
+    <button mat-mini-fab>
+      <fa-icon [icon]="faFile"></fa-icon>
+    </button>
   </div>
 </div>
