--- a/src/app/components/loading-post/loading-post.component.scss
+++ b/src/app/components/loading-post/loading-post.component.scss
@@ -4,6 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 600px;
+    margin-bottom: 25px;
 
     .header {
         display: grid;
