--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -6,6 +6,7 @@
   (scrolled)="onScrollDown()"
   (scrolledUp)="onUp()">
   <app-loading-post *ngIf="isLoading"></app-loading-post>
+  <app-loading-post *ngIf="isLoading"></app-loading-post>
   <app-post *ngFor="let post of posts" [data]="post"></app-post>
 </div>
 
