--- a/src/app/components/loading-post/loading-post.component.scss
+++ b/src/app/components/loading-post/loading-post.component.scss
@@ -1,5 +1,5 @@
 .post {
-    border: 1px solid white;
+    background-color: white;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
