--- a/src/app/components/custom-button/custom-button.component.scss
+++ b/src/app/components/custom-button/custom-button.component.scss
@@ -1,11 +1,13 @@
 $button-bg-color: #FF795A;
 $button-bg-color-hover: rgb(248, 92, 58);
+$button-delete-bg-color-hover: red;
 $button-text-color: white;
 
 .custom-button {
     border-radius: 50px;
     border: 0;
     color: $button-text-color;
+    cursor: pointer;
     font-family: 'Montserrat', sans-serif;
     transition: all 0.2s ease-in;
     width: 100%;
@@ -18,4 +20,11 @@ $button-text-color: white;
 .not-disabled {
     box-shadow: 0 13px 26px rgba(255, 121, 90, 0.5);
     cursor: pointer;
+}
+
+.delete-button {
+    &:hover {
+        background-color: $button-delete-bg-color-hover !important;
+        color: white !important;
+    }
 }
