resource only editable if belongs to self

--- a/src/app/general/resource/resource.component.html
+++ b/src/app/general/resource/resource.component.html
@@ -4,7 +4,7 @@
     <h4>{{ data.title }}</h4>
     <p>{{ data.description | truncate:[40] }}</p>
     <div class="actions">
-      <button (click)="goToEdit()" mat-button>
+      <button *ngIf="currentUser === resourceUser" (click)="goToEdit()" mat-button>
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
