separate components for profile page

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,176 +1,15 @@
 <mat-progress-bar mode="query" *ngIf="isLoading">
 </mat-progress-bar>
 
-<mat-tab-group mat-align-tabs="center" (selectedTabChange)="tabClick($event)">
+<mat-tab-group mat-align-tabs="center">
   <!-- * Profile Management -->
   <mat-tab label="Profile">
-    <div class="public-view" *ngIf="isPublicView">
-      <div class="section-container">
-        <div class="section">
-          <div class="profile-picture">
-            <div class="image-container"
-              [ngStyle]="{ 'background-image': 'url(' + image  +')', 'cursor': 'inherit', 'border': 'none' }"></div>
-            <div class="text">
-              <p>{{ username }}</p>
-              <p>{{ email }}</p>
-            </div>
-            <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = false">Edit Profile</button>
-          </div>
-          <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = false">Edit Profile</button>
-
-          <mat-divider></mat-divider>
-
-          <!--* Public view of profile -->
-          <div class="public-view-content">
-            <h1 *ngIf="name">{{ name }}</h1>
-            <a *ngIf="website" [href]="website" target="_blank">
-              <fa-icon [icon]="faExternalLinkAlt"></fa-icon>&nbsp; Website
-            </a>
-            <p class="bio" *ngIf="bio">{{ bio }}</p>
-            <mat-chip-list *ngIf="interests">
-              <mat-chip *ngFor="let interest of interests">{{ interest }}</mat-chip>
-            </mat-chip-list>
-          </div>
-
-          <!-- * Progress Bar -->
-          <mat-progress-bar *ngIf="profileProgress < 100" mode="determinate" [value]="profileProgress">
-          </mat-progress-bar>
-          <small *ngIf="profileProgress < 100" class="complete-profile-label">Profile Completion:
-            {{ profileProgress }}%</small>
-        </div>
-      </div>
-    </div>
-
-    <div class="change-profile-data" *ngIf="!isPublicView">
-      <div class="section-container">
-        <div class="section">
-          <div class="profile-picture">
-            <div class="image-container" [ngStyle]="{ 'background-image': 'url(' + image  +')' }"
-              (click)="openCpiDialog()"></div>
-            <div class="text">
-              <p>{{ profileForm.controls.username.value }}</p>
-              <p>{{ profileForm.controls.email.value }}</p>
-            </div>
-            <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = true; getUserData();">View
-              Profile</button>
-          </div>
-          <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = true; getUserData();">View
-            Profile</button>
-          <mat-divider></mat-divider>
-          <div class="section-header">
-            <h4>Personal Information</h4>
-          </div>
-
-          <div class="section-content">
-            <h6>Public Information</h6>
-
-            <form [formGroup]="profileForm" (ngSubmit)="saveProfileForm()">
-              <mat-form-field appearance="outline">
-                <mat-label>Name</mat-label>
-                <input matInput placeholder="Name" formControlName="name">
-              </mat-form-field>
-
-              <mat-form-field appearance="outline">
-                <mat-label>Website</mat-label>
-                <input matInput placeholder="http://www.website.com" formControlName="website">
-              </mat-form-field>
-
-              <mat-form-field appearance="outline">
-                <mat-label>Bio</mat-label>
-                <textarea matInput placeholder="Tell us something about yourself" formControlName="bio"></textarea>
-              </mat-form-field>
-
-              <mat-form-field appearance="outline">
-                <mat-label>Interests</mat-label>
-                <mat-chip-list #chipList aria-label="Interest selection">
-                  <mat-chip *ngFor="let interest of interests" [selectable]="selectable" [removable]="removable"
-                    (removed)="removeInterest(interest)">
-                    {{ interest }}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                  </mat-chip>
-                  <input placeholder="Add an Interest" [matChipInputFor]="chipList"
-                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-                    (matChipInputTokenEnd)="addInterest($event)">
-                </mat-chip-list>
-              </mat-form-field>
-
-              <h6>Private Information</h6>
-              <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input matInput placeholder="Email" formControlName="email">
-              </mat-form-field>
-
-              <div class="form-button-container">
-                  <app-custom-button buttonLabel="Save" [isDisabled]="isProfileSaveButtonDisabled" size="small"></app-custom-button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Change Password -->
-    <div class="section-container">
-      <div class="section">
-        <div class="section-header">
-          <h4>Change Password</h4>
-        </div>
-        <div class="section-content">
-          <form [formGroup]="passwordForm" (ngSubmit)="changePasswordForm()">
-            <mat-form-field appearance="outline">
-              <mat-label>Current Password</mat-label>
-              <input matInput placeholder="" formControlName="currentPass" type="password">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-              <mat-label>New Password</mat-label>
-              <input matInput placeholder="" formControlName="password" type="password">
-              <mat-error *ngIf="passwordForm.controls['password'].hasError('passwordNotStrong')">
-                {{ passwordForm.controls['password'].errors.error_message }}
-              </mat-error>
-              <mat-error *ngIf="passwordForm.controls['password'].hasError('minlength')">
-                Password must be at least 4 characters
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-              <mat-label>Confirm New Password</mat-label>
-              <input matInput placeholder="" formControlName="confirm_password" type="password">
-              <mat-error *ngIf="passwordForm.controls['confirm_password'].hasError('passwordNotEquivalent')">
-                Passwords don't match
-              </mat-error>
-            </mat-form-field>
-
-            <div class="form-button-container">
-                <app-custom-button buttonLabel="Save" size="small"></app-custom-button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <!-- Privacy -->
-    <div class="section-container">
-      <div class="section">
-        <div class="section-header">
-          <h4>Privacy</h4>
-        </div>
-
-        <div class="section-content">
-          <h6>Delete Account</h6>
-          <form [formGroup]="deleteAccountForm" (ngSubmit)="openConfirmAccountDeletionDialog()">
-            <mat-form-field appearance="outline">
-              <mat-label>Username</mat-label>
-              <input matInput placeholder="Write your username" formControlName="username">
-              <mat-hint>Write your username to confirm account deletion</mat-hint>
-            </mat-form-field>
-            <div class="form-button-container clearfix">
-                <app-custom-button buttonLabel="Delete" *ngIf="isDeleteable" size="small" [backgroundColor]="delete"></app-custom-button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+    <!-- * Edit Profile -->
+    <app-edit-profile></app-edit-profile>
+    <!-- * Change Password -->
+    <app-change-password></app-change-password>
+    <!-- * Delete Account -->
+    <app-delete-account></app-delete-account>
   </mat-tab>
 
   <!-- * Followers -->
