--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -1,6 +1,6 @@
 <div class="section-container">
   <!-- * Search resources -->
-  <div class="search w-100">
+  <div class="search">
     <form [formGroup]="resourceSearchForm">
       <mat-form-field appearance="outline">
         <mat-label>Search</mat-label>
