--- a/src/app/pages/manage/manage-collections/manage-collections.component.scss
+++ b/src/app/pages/manage/manage-collections/manage-collections.component.scss
@@ -16,9 +16,16 @@
 }
 
 .list-of-collections {
-  max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  ;
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  grid-auto-flow: dense;
+  grid-column-gap: 5px;
   justify-items: center;
+}
+
+@media (min-width: 768px) {
+  .list-of-collections {
+    justify-items: start;
+    grid-template-columns: repeat(auto-fit, 210px);
+  }
 }
