can now search collections

--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -26,3 +26,11 @@
         <div class="comment animate"></div>
     </div>
 </div>
+
+<div class="collection" *ngIf="type === 'collection'">
+    <div class="image"></div>
+    <div class="title animate"></div>
+    <div class="description">
+        <div class="comment animate"></div>
+    </div>
+</div>
