--- a/src/app/pages/manage/manage-collections/manage-collections.component.html
+++ b/src/app/pages/manage/manage-collections/manage-collections.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="list-of-collections" *ngIf="isLoading">
-    <app-loading type="resource"></app-loading>
+    <app-loading type="collection"></app-loading>
   </div>
 
   <div *ngIf="collections && collections.length === 0">
