wip public profile

--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -1,7 +1,9 @@
 <div class="post">
   <!-- * Header -->
   <div class="header">
-    <div class="user-image" [ngStyle]="{ 'background-image': 'url(' + userImage  +')' }">
+    <div class="user-image" 
+    [routerLink]="['/profile/', username]"
+    [ngStyle]="{ 'background-image': 'url(' + userImage  +')' }">
     </div>
     <div class="uploader-info">
       <span>{{ username }}</span>
