wip view others' collection

--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -8,6 +8,10 @@
   <app-loading *ngIf="isLoading"></app-loading>
   <app-loading *ngIf="isLoading"></app-loading>
   <app-post *ngFor="let post of posts" [data]="post"></app-post>
+
+  <div class="section-container" *ngIf="posts.length === 0">
+    <p>You're really not supposed to see this</p>
+  </div>
 </div>
 
 <div class="add-content-buttons">
