--- a/src/app/general/collection/collection.component.scss
+++ b/src/app/general/collection/collection.component.scss
@@ -11,6 +11,7 @@ $block-border: 1px solid white;
   display: inline-block;
   transition: all 0.2s ease-in-out;
   margin-bottom: 25px;
+  margin-right: 15px;
 
   &:hover {
 		box-shadow: 0 22px 32px 0 rgba(197, 197, 197, 0.6);
