--- a/src/app/pages/view-collection/view-collection.component.scss
+++ b/src/app/pages/view-collection/view-collection.component.scss
@@ -4,6 +4,11 @@
     .collection-header {
       margin-bottom: 15px;
 
+      .username {
+        color: rgba(0, 0, 0, .5);
+        cursor: pointer;
+      }
+
       mat-form-field {
         width: 100%;
         
