lotta stuff man i dunno

--- a/src/app/general/collection/collection.component.html
+++ b/src/app/general/collection/collection.component.html
@@ -1,4 +1,4 @@
-<div class="collection-container">
+<div class="collection-container" (click)="goToCollection()">
   <div class="collection">
     <div class="block" [ngStyle]="{'background-image': 'url('+ image1 +')'}"></div>
     <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
