--- a/src/app/general/resource/resource.component.html
+++ b/src/app/general/resource/resource.component.html
@@ -1,5 +1,5 @@
 <div class="resource">
-  <img class="image" [src]="image" [routerLink]="['/view/', id]">
+  <img class="image" [src]="image" (click)="goToView()">
   <div class="details">
     <h4>{{ data.title }}</h4>
     <p>{{ data.description | truncate:[40] }}</p>
@@ -18,9 +18,21 @@
         <fa-icon [icon]="faTrashAlt"></fa-icon>
       </button>
 
-      <button *ngIf="isInCollectionPage" mat-button color="warn" (click)="deleteResourceFromCollection()">
+      <button *ngIf="isInCollectionPage && self" mat-button color="warn" (click)="deleteResourceFromCollection()">
         <fa-icon [icon]="faFolderMinus"></fa-icon>
       </button>
+    </div>
+
+    <div class="actions" *ngIf="currentUser !== resourceUser">
+      <a [href]="data.url" target="_blank">
+        <button mat-button>
+          <fa-icon [icon]="faExternalLinkAlt"></fa-icon>
+        </button>
+
+        <button *ngIf="isInCollectionPage && self" mat-button color="warn" (click)="deleteResourceFromCollection()">
+          <fa-icon [icon]="faFolderMinus"></fa-icon>
+        </button>
+      </a>
     </div>
   </div>
   <div class="stats"></div>
